crates/schema/tests/compile_fail/derive_reserved_duplicate.stderr
error: key `old_key` is reserved more than once
 --> tests/compile_fail/derive_reserved_duplicate.rs:6:30
  |
6 | #[schema(reserved("old_key", "old_key"))]
  |                              ^^^^^^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_reserved_duplicate.rs:13:18
   |
 8 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
13 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
